[metadata]
name = napari-demo-data
version = 0.0.1
author = Genevieve Buckley
author_email = yourname@example.com
url = https://github.com/GenevieveBuckley/napari-demo-data
license = BSD-3-Clause
description = Sample data for the napari image viewer.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/GenevieveBuckley/napari-demo-data/issues
    Documentation = https://github.com/GenevieveBuckley/napari-demo-data#README.md
    Source Code = https://github.com/GenevieveBuckley/napari-demo-data
    User Support = https://github.com/GenevieveBuckley/napari-demo-data/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-demo-data = data
